# MIDP

./: .gitignore  Makefile  README.md  check_sampler_quality.py  find_box.py  find_mean_box.py  generate_data_list.py  mha2nifti.py  mha2nii.py  nifti2nrrd.py  nii2mha.py  nrrd2nifti.py  reconstruction.py  reconstruction_with_reverter.py  resample_cyberknife_dataset.py  resample_msd_dataset.py  resample_nrrd_dataset.py  sample_generator.py  sample_loader.py  sample_train.py  save_resample_prediction.py  setup.cfg  test.py
MIDP/: __init__.py  metrics.py  preprocessings.py
MIDP/generators/: __init__.py  augmentor.py  batch_generator.py  block_generator.py  block_sampler.py  data_generator.py  generators.py  multi_thread_queue_generator.py  patch_generator.py  reconstructor.py  reverter.py  thread_safe_generator.py
configs/: block_generator.yaml  block_generator_crop.yaml  block_generator_stride.yaml  box_eyes.json  data_list.yaml  genenrator_test_aug.yaml  generator.yaml  generator_eyes.yaml  loader_abcs.yaml  loader_abcs_ct_mr.yaml  loader_abcs_task2_optic.yaml  loader_eyes.yaml  loader_eyes_NTUH.yaml  loader_pancreas.yaml  loader_parotids.yaml  msd_data_list.yaml  msd_loader.yaml  nifti_loader.yaml  nifti_loader_test_aug.yaml  nrrd2nifti.yaml  nrrd2nifti_vis.yaml  nrrd2nifti_vis_4mm.yaml  nrrd_loader.yaml  nrrd_loader_eyes.yaml  nrrd_loader_eyes_bbox.yaml  nrrd_loader_find_bbox.yaml  nrrd_loader_resample.yaml  parsing_loader.yaml  reconstruction.yaml  test_generator.yaml  train_list.yaml  train_list_eyes.yaml  training.yaml
data_lists/: ptd_bs.yaml
docs/: usage.adoc  usage.html
(+16 files in other folders)
