[metadata]
name = MIDP
version = 0.1.1
url = https://github.com/YuanYuYuan/medical-image-data-pipeline
author = Yu Yuan, Yuan
author_email = az6980522@gmail.com
description = Medical Image Data Pipeline
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
install_requires =
    pyyaml==5.3.1
    torch==1.4.0
    numpy==1.16.4
    ruamel.yaml==0.16.10
    nibabel==2.3.0
    pydicom==1.4.2
    tqdm==4.44.1
    scipy==1.4.1
    opencv-python==4.2.0.32
    torchio==0.17.0
    medpy==0.4.0
