[metadata]
name = MIDP
version = 0.1.1
url = https://github.com/YuanYuYuan/medical-image-data-pipeline
author = Yu Yuan, Yuan
author_email = az6980522@gmail.com
description = Medical Image Data Pipeline
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
install_requires =
    torch
    ruamel.yaml
    pyyaml
    opencv-python
    numpy
    nibabel
    pydicom
    tqdm
    scipy
    torchio==0.17.0
    medpy==0.4.0
